--- a/Deneme.html
+++ b/Deneme.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deneme Sürümü</title>
     <h1>VS CODE DENEME</h1>
+    <h2>Deneme 2</h2>
 </head>
 <body>
     
