--- a/Deneme.html
+++ b/Deneme.html
@@ -9,11 +9,9 @@
     <h2>Deneme 2</h2>
     <h3>Deneme 3</h3>
     <h4>Deneme4</h4>
-<<<<<<< HEAD
     <h5>Deneme 5.2</h5>
-=======
     <h5>Deneme 5</h5>
->>>>>>> 01cc1f0f607696dd029db3c9bf2f36d3d423c799
+    <h6>Deneme 6</h6>
 </head>
 <body>
     
